[package]
name = "hurdle-server"
version = "0.1.0"
authors = ["Dom Rodriguez <shymega@shymega.org.uk>"]
edition = "2018"

[dependencies]
hurdle-common-protocol = { path = "../common/protocol" }
hurdle-server-rpc = { path = "./rpc" }

[dependencies.clippy]
version = "*"
optional = true

[features]
default = []
